*****************************************************************************************************
digiKam 3.1.0 - Release date: 2013-03-10

NEW FEATURES:


BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> 313902 - OSM maps not refreshing.
002 ==> 308696 - No thumbnails on first start of geolocation module for newly imported images.
003 ==> 269033 - digiKam crashed after startup.
004 ==> 314697 - Print image does not work.
005 ==> 314726 - digiKam BQM RAW tool doesn't have options to work in 16 bits and to manage color profiles.
006 ==> 301503 - No progress indicator or cancel button.
007 ==> 